# intlrs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  public-api.txt
.github/workflows/: ci.yml  release-plz.yml
benches/: throughput.rs
codegen/: Cargo.toml
codegen/src/: main.rs
data/brkitr/: README.txt
data/cldr/48/: calendar.json  collation.json  compact.json  currency.json  display.json  islamic.json  likely.json  lists.json  numbers.json  numsys.json  ordsuffix.json  persian.json  rbnf.json  relative.json  skeletons.json  timezone.json  units.json
data/cldr/48/bcp47/: README.md
data/cldr/48/collation/: README.txt
data/cldr/48/dates/: README.txt
data/ucd/17.0.0/: Unihan_kRSUnicode.txt
examples/: sizeprobe.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: formatters.rs  unicode.rs
src/: calendar.rs  cldr.rs  datetime.rs  display.rs  lib.rs  list.rs  locale.rs  message.rs  number.rs  plural.rs  predicates.rs  relative.rs  spellout.rs  timezone.rs  translit.rs  unit.rs
src/unicode/: bidi.rs  case.rs  category.rs  collate.rs  ident.rs  idna.rs  mod.rs  names.rs  normalize.rs  numeric.rs  predicates.rs  script.rs  segment.rs  segment_dict.rs  segment_dict_cjk.rs  spoof.rs  width.rs
tests/: bidi.rs  bidi_conformance.rs  bidi_test_conformance.rs  calendar.rs  case.rs  casing.rs  categories.rs  collate.rs  collation_conformance.rs  collation_data_consistency.rs  collation_strength.rs  datetime.rs  differential.rs  display.rs  grapheme_conformance.rs  iana_tz.rs  ident.rs  idna.rs  idna_conformance.rs  interval.rs  line_conformance.rs  list.rs  locale.rs  message.rs  names.rs  normalization_conformance.rs  normalize.rs  number.rs  numeric.rs  plural.rs  plural_conformance.rs  properties.rs  relative.rs  robustness.rs  script.rs  segment.rs  segment_dict.rs  segment_dict_cjk.rs  segment_dict_km.rs  segment_dict_lao.rs  (+11 more)
