[package]
name = "intl"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
description = "Pure-Rust, no_std internationalization primitives (a pure-Rust ICU analog). The `unicode` module provides General_Category, character predicates, scripts, East Asian Width, numeric values, case mapping/folding, UAX #15 normalization (NFC/NFD/NFKC/NFKD), and UTS #10 collation — property tables compiled into const-fn match lookups, with feature-selectable codepoint ranges."
repository = "https://github.com/KarpelesLab/intlrs"
license = "MIT"
readme = "README.md"
keywords = ["intl", "unicode", "no_std", "i18n", "ucd"]
categories = ["no-std", "internationalization", "text-processing"]
# Only ship generated Rust + the embedded CLDR/UCD `.bin` tables + sources; the
# multi-MB vendored UCD/CLDR data and the codegen tool are excluded.
include = [
    "src/**/*.rs",
    "src/cldr/*.bin",
    "src/unicode/*.bin",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[features]
# Batteries-included by default: the whole Unicode codepoint space (`full`), the
# allocating APIs (`alloc`), and the full character-name database (`names`). All
# pure-Rust, `no_std`, MSRV 1.70. To shrink the build, opt out with
# `default-features = false` and select a smaller range tier (see below).
# (`iana-tz` is the only thing not on by default — it adds a dependency.)
default = ["names"] # names -> alloc -> full -> bmp -> latin1 -> ascii

# Coarse, nested codepoint-range tiers. Selecting a tier compiles it and every
# smaller tier; codepoints outside the compiled range resolve to `Unassigned` (Cn).
ascii = []              # U+0000..=U+007F
latin1 = ["ascii"]      # U+0080..=U+00FF
bmp = ["latin1"]        # U+0100..=U+FFFF (rest of the Basic Multilingual Plane)
full = ["bmp"]          # U+10000..=U+10FFFF (supplementary planes)

# Allocation. Still `no_std`; enables APIs that need `alloc` (the formatters,
# `unicode::collate`, …). Implies `full` because they operate over the whole
# codepoint space.
alloc = ["full"]

# Full IANA time-zone support via the embedded `timezone-data` crate (the IANA
# tz database: historical transitions, DST, abbreviations). Implies `alloc` for
# the `DateTime` bridge. NOTE: `timezone-data` raises the MSRV to 1.86 when this
# feature is enabled; the rest of the crate stays at 1.70.
iana-tz = ["dep:timezone-data", "alloc"]

# The full tabulated character `Name` database (`unicode::name`). Implies
# `alloc`. NOTE: embeds a ~1.3 MB name blob (`src/unicode/names.bin`) into the
# binary when enabled; the algorithmic `char_name` (Hangul/CJK/…) needs no data
# and is always available.
names = ["alloc"]

[dependencies]
# Optional: only pulled in by the `iana-tz` feature. no_std / no-alloc itself.
timezone-data = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "throughput"
harness = false
required-features = ["alloc"]

# This crate is intentionally NOT a cargo workspace. The `codegen/` directory is
# a standalone, packaging-time tool (its own independent package) that
# regenerates the committed tables under src/unicode/generated/ when the UCD
# data or Unicode version changes. It is never built, published, or versioned as
# part of `intl`. Run it with:
#   cargo run --manifest-path codegen/Cargo.toml
