[package]
name = "intl"
version = "0.2.0"
edition = "2021"
rust-version = "1.86"
description = "Pure-Rust, no_std internationalization primitives (a pure-Rust ICU analog). The `unicode` module provides General_Category, character predicates, scripts, East Asian Width, numeric values, case mapping/folding, UAX #15 normalization (NFC/NFD/NFKC/NFKD), and UTS #10 collation — property tables compiled into const-fn match lookups, with feature-selectable codepoint ranges."
repository = "https://github.com/KarpelesLab/intlrs"
license = "MIT"
readme = "README.md"
keywords = ["intl", "unicode", "no_std", "i18n", "ucd"]
categories = ["no-std", "internationalization", "text-processing"]
# Only ship generated Rust + the embedded CLDR/UCD `.bin` tables + sources; the
# multi-MB vendored UCD/CLDR data and the codegen tool are excluded.
include = [
    "src/**/*.rs",
    "src/cldr/*.bin",
    "src/unicode/*.bin",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[features]
# Batteries-included by default: the whole Unicode codepoint space (`full`),
# the allocating APIs (`alloc`), every Unicode algorithm component, the full
# character-name database (`names`), and the IANA time-zone database (`iana-tz`).
# All `no_std`. To shrink the build, opt out with `default-features = false` and
# enable only the range tier + components you need (see below).
default = [
    "full",
    "alloc",
    "names",
    "normalization",
    "segmentation",
    "bidi",
    "case",
    "identifiers",
    "collation",
    "idna",
    "confusables",
    "iana-tz",
]

# --- Range tiers (opt out for size) -----------------------------------------
# Coarse, nested codepoint-range tiers. Selecting a tier compiles it and every
# smaller tier; codepoints outside the compiled range resolve to `Unassigned` (Cn).
ascii = []              # U+0000..=U+007F
latin1 = ["ascii"]      # U+0080..=U+00FF
bmp = ["latin1"]        # U+0100..=U+FFFF (rest of the Basic Multilingual Plane)
full = ["bmp"]          # U+10000..=U+10FFFF (supplementary planes)

# Allocation. Still `no_std`; enables APIs that need `alloc` (the formatters,
# `collate`, `idna`, …). Implies `full` because they operate over the whole
# codepoint space.
alloc = ["full"]

# --- Unicode algorithm components (opt out individually) --------------------
# Each gates both its module and its (large) generated table. The foundational
# property lookups — General_Category, predicates, scripts, East Asian Width,
# numeric values — are always available. Dependencies between components are
# expressed below (e.g. collation builds on case + normalization).
normalization = []                          # UAX #15 NFC/NFD/NFKC/NFKD
segmentation = []                           # UAX #29 grapheme/word/sentence + UAX #14 line
bidi = []                                   # UAX #9 bidirectional algorithm
identifiers = []                            # UAX #31 identifiers
case = ["normalization", "segmentation"]    # case mapping/folding (needs NFD + word breaks)
collation = ["case", "alloc"]               # UTS #10 collation (~1.9 MB table)
idna = ["normalization", "alloc"]           # UTS #46 IDNA
confusables = ["normalization", "alloc"]    # UTS #39 confusable/skeleton

# The full tabulated character `Name` database (`unicode::name`). Implies
# `alloc`. NOTE: embeds a ~1.3 MB name blob (`src/unicode/names.bin`) into the
# binary when enabled; the algorithmic `char_name` (Hangul/CJK/…) needs no data
# and is always available.
names = ["alloc"]

# --- Time zones -------------------------------------------------------------
# Full IANA time-zone support via the embedded `timezone-data` crate (historical
# transitions, DST, abbreviations). Implies `alloc` for the `DateTime` bridge.
# POSIX `TZ` rules are available without this feature.
iana-tz = ["dep:timezone-data", "alloc"]

[dependencies]
# Optional: only pulled in by the `iana-tz` feature. no_std / no-alloc itself.
timezone-data = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "throughput"
harness = false
required-features = ["alloc"]

# This crate is intentionally NOT a cargo workspace. The `codegen/` directory is
# a standalone, packaging-time tool (its own independent package) that
# regenerates the committed tables under src/unicode/generated/ when the UCD
# data or Unicode version changes. It is never built, published, or versioned as
# part of `intl`. Run it with:
#   cargo run --manifest-path codegen/Cargo.toml
