[package]
name = "intl"
version = "0.5.0"
edition = "2024"
rust-version = "1.88"
description = "Pure-Rust, no_std internationalization primitives (a pure-Rust ICU analog). The `unicode` module provides General_Category, character predicates, scripts, East Asian Width, numeric values, case mapping/folding, UAX #15 normalization (NFC/NFD/NFKC/NFKD), and UTS #10 collation — property tables compiled into const-fn match lookups, with feature-selectable codepoint ranges."
repository = "https://github.com/KarpelesLab/intlrs"
license = "MIT"
readme = "README.md"
keywords = ["intl", "unicode", "no_std", "i18n", "ucd"]
categories = ["no-std", "internationalization", "text-processing"]
# Only ship generated Rust + the embedded CLDR/UCD `.bin` tables + sources; the
# multi-MB vendored UCD/CLDR data and the codegen tool are excluded.
include = [
    "src/**/*.rs",
    "src/cldr/*.bin",
    "src/unicode/*.bin",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[features]
# Batteries-included by default: the whole Unicode codepoint space (`full`),
# the allocating APIs (`alloc`), every Unicode algorithm component, the full
# character-name database (`names`), and the IANA time-zone database (`iana-tz`).
# All `no_std`. To shrink the build, opt out with `default-features = false` and
# enable only the range tier + components you need (see below).
default = [
    "full",
    "alloc",
    "names",
    "normalization",
    "segmentation",
    "bidi",
    "case",
    "identifiers",
    "collation",
    "idna",
    "confusables",
    "iana-tz",
    # CLDR formatters (each opt-out-able; see below).
    "number",
    "currency",
    "units",
    "datetime",
    "calendars-extra",
    "displaynames",
    "list",
    "relative",
    "message",
    "spellout",
    "transliterate",
    "locale",
]

# --- Range tiers (opt out for size) -----------------------------------------
# Coarse, nested codepoint-range tiers. Selecting a tier compiles it and every
# smaller tier; codepoints outside the compiled range resolve to `Unassigned` (Cn).
ascii = []              # U+0000..=U+007F
latin1 = ["ascii"]      # U+0080..=U+00FF
bmp = ["latin1"]        # U+0100..=U+FFFF (rest of the Basic Multilingual Plane)
full = ["bmp"]          # U+10000..=U+10FFFF (supplementary planes)

# Allocation. Still `no_std`; enables APIs that need `alloc` (the formatters,
# `collate`, `idna`, …). Implies `full` because they operate over the whole
# codepoint space.
alloc = ["full"]

# --- Unicode algorithm components (opt out individually) --------------------
# Each gates both its module and its (large) generated table. The foundational
# property lookups — General_Category, predicates, scripts, East Asian Width,
# numeric values — are always available. Dependencies between components are
# expressed below (e.g. collation builds on case + normalization).
normalization = []                          # UAX #15 NFC/NFD/NFKC/NFKD
segmentation = []                           # UAX #29 grapheme/word/sentence + UAX #14 line
bidi = []                                   # UAX #9 bidirectional algorithm
identifiers = []                            # UAX #31 identifiers
case = ["normalization", "segmentation"]    # case mapping/folding (needs NFD + word breaks)
collation = ["case", "alloc", "_cldr"]      # UTS #10 collation (~1.9 MB table; CLDR tailorings)
idna = ["normalization", "alloc", "bidi"]   # UTS #46 IDNA (bidi: CheckBidi / RFC 5893)
confusables = ["normalization", "alloc"]    # UTS #39 confusable/skeleton

# The full tabulated character `Name` database (`unicode::name`). Implies
# `alloc`. NOTE: embeds a ~1.3 MB name blob (`src/unicode/names.bin`) into the
# binary when enabled; the algorithmic `char_name` (Hangul/CJK/…) needs no data
# and is always available.
names = ["alloc"]

# --- CLDR formatters (opt out individually for size) ------------------------
# Each gates its module AND the CLDR `.bin` table(s) it embeds, so a disabled
# formatter contributes no code or data. All imply `alloc` (except
# `displaynames`, which is borrow-only). `_cldr` is an internal marker enabling
# the shared CLDR data layer; do not select it directly. The always-available
# `plural` and `calendar` (arithmetic) modules need no feature and no data.
_cldr = []                                  # internal: shared CLDR reader + structs
number = ["alloc", "_cldr"]                 # decimal/percent/scientific/compact/ordinal/parse + NumberFormat
currency = ["number"]                       # currency formatting (+ ~0.9 MB currency.bin)
units = ["number"]                          # measurement units (+ units.bin)
datetime = ["number"]                       # date/time/skeleton + POSIX-TZ/GMT (+ calendar/skeletons/timezone.bin)
calendars-extra = ["datetime"]              # Islamic + Persian calendars (+ islamic/persian.bin)
displaynames = ["_cldr"]                    # Intl.DisplayNames (+ ~1.6 MB language/territory names)
list = ["alloc", "_cldr"]                   # Intl.ListFormat
relative = ["number"]                       # Intl.RelativeTimeFormat (uses number)
message = ["number"]                        # ICU MessageFormat (uses number + plural)
spellout = ["alloc", "_cldr"]               # RBNF spell-out (+ rbnf.bin)
transliterate = ["alloc", "normalization"]  # script transliteration
locale = ["alloc", "_cldr"]                 # BCP-47 + likely-subtags (+ likely.bin)

# --- Time zones -------------------------------------------------------------
# Full IANA time-zone support via the embedded `timezone-data` crate (historical
# transitions, DST, abbreviations). Drives the `datetime` named-zone path.
# POSIX `TZ` rules and GMT offsets are available with `datetime` alone.
iana-tz = ["dep:timezone-data", "datetime"]

[dependencies]
# Optional: only pulled in by the `iana-tz` feature. no_std / no-alloc itself.
timezone-data = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "throughput"
harness = false
required-features = ["alloc"]

# This crate is intentionally NOT a cargo workspace. The `codegen/` directory is
# a standalone, packaging-time tool (its own independent package) that
# regenerates the committed tables under src/unicode/generated/ when the UCD
# data or Unicode version changes. It is never built, published, or versioned as
# part of `intl`. Run it with:
#   cargo run --manifest-path codegen/Cargo.toml
